# 3d-object-ros

./: CMakeLists.txt  README.md  package.xml
src/: 3d_object_ros_node.cpp  object_3d_ros_node.cpp
