<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_3d_ros</name>
  <version>0.1.0</version>
  <description>Node to convert YOLOX 2D detections to 3D centroids using RGB-D images</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Core dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>bboxes_ex_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>


  <!-- OpenCV dependency -->
  <depend>OpenCV</depend>

  <!-- Export information for build tools -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
